# pocketkaldi

./: .gitignore  Makefile.am  Makefile.in  README.md  configure.ac
src/: alloc.c  alloc.h  am.c  am.cc  am.h  cmvn.c  cmvn.cc  cmvn.h  configuration.cc  configuration.h  decodable.c  decodable.cc  decodable.h  decoder.c  decoder.cc  decoder.h  fbank.c  fbank.cc  fbank.h  fst.c  fst.cc  fst.h  gemm.cc  gemm.h  gemm_haswell.cc  hashlist.c  hashlist.h  hashtable.c  hashtable.cc  hashtable.h  introspect.c  introspect.cc  list.h  main.c  main.cc  main2.cc  matrix.c  matrix.cc  matrix.h  nnet.c  (+26 more)
test/: cmvn_test.cc  configuration_test.cc  fbank_test.cc  fst_test.cc  gemm_test.cc  hashlist_test.cc  hashtable_test.cc  introspect_test.cc  list_test.cc  nnet_test.cc  pcm_reader_test.cc  pool_test.cc  srfft_test.cc  symbol_table_test.cc  test_compute_fbank.sh  vector_test.cc
test/data/: fbankcmvnmat_en-us-hello.wav.txt  fbankmat_en-us-hello.wav.txt  generate_fbankmatrix.sh  kaldi_fbank.conf  test.conf  testinput.fst
tool/: compute_fbank.cc  convert_am.py  convert_cmvn_stats.py  convert_fstfmt.py  convert_trans.py  convert_words.py  extract_id2pdf.cc
